sweet alert y nueva estructura

--- a/src/components/NavBarStyle.css
+++ b/src/components/NavBarStyle.css
@@ -1,6 +1,14 @@
 .linkNavBar{
     color:white;
+    font-size: 25px;
+    
 }
 .linkNavBar:hover{
     color:aquamarine;
 }
+
+.titulo{
+    font-size: 40px;
+    color:blue
+}
+
