--- a/src/components/CardHeroeStyle.css
+++ b/src/components/CardHeroeStyle.css
@@ -23,10 +23,14 @@
 }
 
 .modalHeader{
-    background-color: rgb(89, 81, 200);
-    color:white;
+    background-color: rgb(224, 222, 247);
+    color:rgb(16, 16, 16);
 }
 
 .footerModal{
-    background-color: rgb(232, 218, 244);
+    background-color: rgb(238, 235, 240);
+}
+
+.formGroup{
+    padding: 10px 10px 10px 10px;
 }
